checker/tests/input/ill-typed/extra-tests/multi-parameter/bad-multiply-1.stella
language core;

fn multiply_fn(n : Nat, m : Bool) -> Nat {
    return n * m;
}

fn main(n : Nat) -> Nat {
  return multiply_fn(n, true);
}
